--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,10 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-$content-width: 55%;
+// FIXME: For mobile we don't want this
+// but for desktop web we want the content to
+// be wider.
+//$content-width: 55%;
 
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
